<resources>
    <!--<string name="app_name">Mtrac-Samsung</string>-->
    <string name="app_name">SmartracHMD2</string>
    <!--<string name="app_name">Manpower</string>-->
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_dash_board_activity_for_associates">
        DashBoardActivityForAssociates
    </string>
    <string name="forgotpasswd">Forgot Password?</string>
    <string name="logindesc">Please provide your User Name "\u0026" Password as provided by Manpower Group</string>
    <string name="dashboardbottomtext">"\u00A9" ManpowerGroup Inc.</string>
    <string name="attendance">Attendance</string>
    <string name="intime">In Time</string>
    <string name="outtime">Out Time</string>
    <string name="leave">Leave</string>
    <string name="meeting">Meeting</string>
    <string name="title_activity_give_attendance_tabbed">GiveAttendanceTabbedActivity</string>
    <string name="title_activity_approve_attendance_tabbed">ApproveAttendanceTabbedActivity</string>
    <string name="title_activity_hrms_tabbed">HRMSTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="spinner_title">Select Leave Type</string>
    <string name="spinner_title1">Select Date</string>
    <string name="spinner_title2">Enter Competitor</string>
    <string name="spinner_title3">Select Category</string>
    <string name="spinner_title4">Select Sub-Category</string>
    <string name="spinner_title5">Select Product Name</string>
    <string name="spinner_title6">Select Employee</string>
    <string name="spinner_title7">Select Month</string>
    <string name="spinner_title8">Select Attendance Type</string>
    <string name="spinner_title9">Select Option</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="leave_spinnerItems">
        <item>Casual</item>
        <item>Sick</item>
    </string-array>
    <string-array name="attendanceapproval_spinnerItems">
        <item>2016-06-19</item>
        <item>2016-06-20</item>
        <item>2016-06-09</item>
        <item>2016-06-10</item>
    </string-array>

    <string-array name="attendanceapproval_typerItems">
        <item>Select Attendance Type</item>
        <item>In time</item>
        <item>Out time</item>
        <item>Weekly off</item>
        <item>Leave</item>
        <item>Meeting</item>
    </string-array>

    <string-array name="panno_spinnerItems">
        <item>Applied for</item>
        <item>Number</item>
        <item>Do not have</item>
    </string-array>

    <string-array name="aadharno_spinnerItems">
        <item>Applied for</item>
        <item>Number</item>
        <item>Do not have</item>
    </string-array>

    <string-array name="highestqualificaation_spinnerItems">
        <item>10th Pass</item>
        <item>12th Pass</item>
        <item>Graduate</item>
        <item>Post Graduate</item>
        <item>Diploma</item>
    </string-array>

    <string-array name="receiveassetsbytlsoo_spinnerItems">
        <item>Accept</item>
        <item>Reject</item>
    </string-array>

</resources>
