<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingTop="0dp">
    <!--<View
        android:id="@+id/customViewtargetsettingID"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#d3d5d7"
        android:alpha="0.8"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/targetsettingDateMonthLayoutID"
        android:layout_alignParentTop="true"
        android:weightSum="2"
        android:visibility="gone"
        android:padding="5dp">
        <Spinner
            android:id="@+id/targetsettingDateSpinnerID"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:prompt="@string/spinner_title1"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/backdropdownfieldblack"
            android:drawSelectorOnTop="true"
            />
        <Spinner
            android:id="@+id/targetsettingMonthSpinnerID"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:prompt="@string/spinner_title7"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/backdropdownfieldblack"
            android:drawSelectorOnTop="true"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/targetsettingDateSelectAssociateLayoutID"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/targetsettingDateMonthLayoutID">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_title6"
            android:textStyle="normal"
            android:textSize="14sp"
            android:padding="5dp"
            android:textColor="@color/colorPrimary"/>
        <!-- Spinner Element -->
        <Spinner
            android:id="@+id/targetsettingAssociateSpinnerID"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:prompt="@string/spinner_title6"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/backdropdownfieldblack"
            android:drawSelectorOnTop="true"
            />

        <!--<View
            android:id="@+id/customViewtargetsettingID1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:background="#d3d5d7"
            android:alpha="0.8"/>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/targetsettingDetailsListLayoutID"
        android:layout_centerInParent="true"
        android:layout_below="@+id/targetsettingDateSelectAssociateLayoutID"
        android:layout_above="@+id/botombartargetsettingPageSubmitLayoutID"
        android:visibility="gone">
        <ListView
            android:id="@+id/targetsettingDetailsListViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:divider="#d3d5d7"
            android:paddingTop="0dp"
            android:fadingEdge="none"
            android:fadingEdgeLength="0dp"
            android:background="#ffffff"
            android:cacheColorHint="@android:color/transparent"
            android:padding="0dp"
            android:choiceMode="multipleChoice"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="0dp"
            android:background="#d3d5d7"
            android:alpha="0.8"
            />

        <!--<View
            android:id="@+id/customViewtargetsettingID2"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="#d3d5d7"
            android:alpha="0.8"/>-->
    </LinearLayout>

    <!--<include layout="@layout/bottombar_target_setting"/>-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/botombartargetsettingPageSubmitLayoutID"
        android:layout_alignParentBottom="true">
        <ImageView
            android:id="@+id/targetsettingPageSubmitImageViewID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submitbtn"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            />
    </LinearLayout>

</RelativeLayout>